--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -8,9 +8,42 @@ on:
     branches:
       - master
 jobs:
+  build_bls:
+    name: Build BLS library
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+      - uses: actions/setup-go@v2
+        with:
+          go-version: "^1.15.4"
+      - uses: actions/checkout@v2
+      - uses: technote-space/get-diff-action@v4
+        with:
+          PATTERNS: |
+            **/**.go
+            go.mod
+            go.sum
+      - name: install
+        run: make bls_bindings_build
+        if: "env.GIT_DIFF != ''"
+      # Cache bls library for use by other jobs
+      - name: Save BLS library
+        run: |
+          mkdir -p ~/bls-cache/include
+          cp -vr /usr/local/include/chiabls ~/bls-cache/include
+          cp -vr /usr/local/include/relic* ~/bls-cache/include
+          cp -v /usr/local/lib/libchiabls.a ~/bls-cache/
+        if: env.GIT_DIFF
+      - uses: actions/cache@v2.1.2
+        with:
+          path: ~/bls-cache
+          key: ${{ runner.os }}-bls-library
+        if: env.GIT_DIFF
+
   golangci:
     name: golangci-lint
     runs-on: ubuntu-latest
+    needs: build_bls
     timeout-minutes: 4
     steps:
       - uses: actions/checkout@v2
@@ -20,6 +53,16 @@ jobs:
             **/**.go
             go.mod
             go.sum
+      - uses: actions/cache@v2.1.2
+        with:
+          path: ~/bls-cache
+          key: ${{ runner.os }}-bls-library
+        if: env.GIT_DIFF
+      - name: Install BLS library
+        run: |
+          sudo cp -vr ~/bls-cache/include/* /usr/local/include/
+          sudo cp -vr ~/bls-cache/libchiabls.a /usr/local/lib/
+        if: env.GIT_DIFF
       - uses: golangci/golangci-lint-action@v2.2.1
         with:
           # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
