--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,7 @@ name: Tests
 # This workflow runs on every push to master or release branch and  every pull requests
 # All jobs will pass without running if no *{.go, .mod, .sum} files have been modified
 on:
-  pull_request:
+  workflow_dispatch:
   push:
     branches:
       - master
